@@ -1,3 +1,7 @@
+2004-08-03	blytkerchan
+	* fetch_and_add.c: use full path for headers
+	(fetch_and_add): cast last argument for compare_and_exchange to void*
+
 2004-08-02	blytkerchan
 	* fetch_and_add.c: add necessary headers
 
